# nano

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: bitboards.cpp  bitboards.h  bits.h  hashtable.cpp  hashtable.h  magics.cpp  magics.h  magicsrands.h  nano.cpp  threads.h  types.h  uci.cpp  uci.h  utils.h  zobrist.cpp  zobrist.h  zobristrands.h
tests/: test_magics.cpp
